syntaxDiagrams.txt
/* Code to run on http://www.bottlecaps.de/rr/ui to get the syntax diagrams*/

Program ::= 'program' 'id' '\n' Hardware Vars Assign Functions Main
Hardware ::= CamDeclaration InputsDeclaration OutputsDeclaration PwmDeclaration
CamDeclaration ::= ( 'CAM' ('webcam' | 'picam') ':' 'id' '\n' )?
InputsDeclaration ::= ( 'INPUT' PinList '\n' )?
OutputsDeclaration ::= ( 'OUTPUT' PinList '\n' )?
PwmDeclaration ::= ( 'PWM' PinList '\n' )?
PinList ::= 'c_int' ':' 'id' (',' 'c_int' ':' 'id')*
Vars ::= (Tipo 'id' (',' 'id')* '\n')*
Tipo ::= 'bool' | 'int' | 'float' | 'char' | 'string' | 'image'
Functions ::= ('def' (Tipo | 'void') 'id' '(' (Tipo 'id' (',' Tipo 'id')* )? ')' Block )*
Assign ::= ( 'id' '=' Expression '\n' )*
Main ::= 'void' 'main' '(' (Tipo 'id' (',' Tipo 'id')* )? ')' Block
Block ::= ':' ('\n')? ( Statement ('\n' Statement)* )? ('\n')? ';' '\n'
Statement ::= Assign | Condition | Cycle | Funct '\n' | 'return' Expression '\n'
Condition ::= 'if' Expression Block ('else' Block)?
Cycle ::= 'while' Expression Block | 'do' Block 'while' Expression '\n'
Funct ::= 'id' '(' (Expression (',' Expression)* )? ')'
Expression ::= Exp (('>'|'<'|'>='|'<='|'!='|'==') Exp)?
Exp ::= Term ( ('+'|'-') Term )*
Term ::= Factor ( ('*'|'/'|'%') Factor )*
Factor ::= '(' Expression ')' | Cvar | Funct
Cvar ::= 'id' | 'c_int' | 'c_float' | 'c_bool' | 'c_char' | 'c_string' 
